@@ -758,6 +758,28 @@ class ServerOptionsTests(unittest.TestCase):
         expected = "/bin/foo --path='%s'" % os.environ['PATH']
         self.assertEqual(pconfigs[0].command, expected)
 
+    def test_processes_from_section_bad_program_name_spaces(self):
+        instance = self._makeOne()
+        text = lstrip("""\
+        [program:spaces are bad]
+        """)
+        from supervisor.options import UnhosedConfigParser
+        config = UnhosedConfigParser()
+        config.read_string(text)
+        self.assertRaises(ValueError, instance.processes_from_section,
+                          config, 'program:spaces are bad', None)
+
+    def test_processes_from_section_bad_program_name_colons(self):
+        instance = self._makeOne()
+        text = lstrip("""\
+        [program:colons:are:bad]
+        """)
+        from supervisor.options import UnhosedConfigParser
+        config = UnhosedConfigParser()
+        config.read_string(text)
+        self.assertRaises(ValueError, instance.processes_from_section,
+                          config, 'program:colons:are:bad', None)
+
     def test_processes_from_section_no_procnum_in_processname(self):
         instance = self._makeOne()
         text = lstrip("""\
@@ -802,6 +824,19 @@ class ServerOptionsTests(unittest.TestCase):
         [program:foo]
         command = /bin/cat
         process_name = %(program_name)
+        """)
+        from supervisor.options import UnhosedConfigParser
+        config = UnhosedConfigParser()
+        config.read_string(text)
+        self.assertRaises(ValueError, instance.processes_from_section,
+                          config, 'program:foo', None)
+
+    def test_processes_from_section_bad_chars_in_process_name(self):
+        instance = self._makeOne()
+        text = lstrip("""\
+        [program:foo]
+        command = /bin/cat
+        process_name = colons:are:bad
         """)
         from supervisor.options import UnhosedConfigParser
         config = UnhosedConfigParser()
